[project]
name = "nba-monte-carlo"
version = "0.1.0"
description = "dependencies for the NBA Monte Carlo simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core==1.9.4",
    "dbt-duckdb",
    "dlt[filesystem]",
    "duckdb~=1.3.0",
    "numpy",
    "pandas",
    "pyarrow",
    "shandy-sqlfmt[jinjafmt]",
    "sqlmesh==0.88",
    "polars"
]
